--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
  	align-items: center;
  	justify-content: center;
  	height: 100vh;
-    font-weight: 10;
+    font-weight: 10 !important;
  }
 
  .logo {
